--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "git@github.com:bem-site/xliff-editor.git"
   },
   "engines": {
-    "node": ">=4"
+    "node": ">=6"
   },
   "dependencies": {
     "base-64": "^0.1.0",
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-alpha.1",
     "debug": "^2.2.0",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "github-api": "^2.3.0",
     "got": "^6.3.0",
@@ -28,7 +29,10 @@
     "parse-github-url": "^0.3.1",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
-    "serve-favicon": "^2.3.0"
+    "pinkie-promise": "^2.0.1",
+    "serve-favicon": "^2.3.0",
+    "serve-static": "^1.11.1",
+    "yandex-translate": "^2.1.0"
   },
   "devDependencies": {
     "enb": "^1.3.0",
