--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "parse-github-url": "^0.3.1",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "yandex-translate": "^2.1.0"
   },
   "devDependencies": {
     "enb": "^1.3.0",
