--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "*",
-  "name": "xliff-editor",
+  "name": "cataria",
   "version": "0.0.0-beta",
   "repository": {
     "type": "git",
