--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,10 @@
     "libs"
   ],
   "dependencies": {
-    "bem-components": "3.0.1"
+    "bem-components": "3.0.1",
+    "bem-stat-counters": "^1.3.2"
+  },
+  "resolutions": {
+    "bem-core": "3.0.1"
   }
 }
