--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-alpha.1",
     "debug": "^2.2.0",
+    "debug-http": "^1.1.0",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "fuse.js": "^2.4.1",
