--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "fuse.js": "^2.4.1",
-    "github-api": "^2.3.0",
-    "github-basic": "^6.0.0",
+    "github-node-api": "github:tadatuta/github-node-api",
     "got": "^6.3.0",
     "md2xliff": "https://github.com/tadatuta/md2xliff.git#tmx",
     "mongodb": "^2.1.18",
