--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "passport-github2": "^0.1.10",
     "serve-favicon": "^2.3.0",
     "serve-static": "^1.11.1",
-    "yandex-translate": "^2.1.0"
+    "yandex-translate": "github:sidorares/yandex-translate"
   },
   "devDependencies": {
     "enb": "^1.3.0",
