--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "base-64": "^0.1.0",
     "body-parser": "^1.15.1",
-    "bower": "^1.7.9",
     "connect": "^3.4.1",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-alpha.1",
@@ -36,6 +35,9 @@
     "yandex-translate": "github:sidorares/yandex-translate"
   },
   "devDependencies": {
+    "bem-components": "^3.1.3",
+    "bem-core": "^3.2.0",
+    "bem-stat-counters": "^1.5.1",
     "enb": "^1.3.0",
     "enb-bem-techs": "^2.2.1",
     "enb-bemxjst": "^7.0.0",
@@ -55,12 +57,9 @@
     "build": "npm i && npm run make",
     "start": "node server",
     "make": "enb make",
-    "postinstall": "npm run deps",
-    "deps": "bower i --allow-root",
     "test": "jscs . && jshint-groups",
     "watch": "watch-run -p '*.blocks/**' enb make",
-    "docker-build": "docker build -t registry.ape.yandex.net/bem/saas-xliff-farm-server ./",
-    "docker-push": "docker push registry.ape.yandex.net/bem/saas-xliff-farm-server"
+    "docker-build": "docker build ."
   },
   "private": true
 }
