--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "base-64": "^0.1.0",
     "body-parser": "^1.15.1",
+    "chokidar": "^1.7.0",
     "connect": "^3.4.1",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-alpha.1",
@@ -22,22 +23,25 @@
     "fuse.js": "^2.4.1",
     "github-node-api": "^0.0.3",
     "got": "^6.3.0",
+    "lodash": "^4.17.4",
     "md2xliff": "https://github.com/tadatuta/md2xliff.git#tmx",
     "mongodb": "^2.1.18",
     "mongoose": "^4.5.2",
     "morgan": "^1.7.0",
+    "node-notifier": "^5.1.2",
     "parse-github-url": "^0.3.1",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
     "serve-favicon": "^2.3.0",
     "serve-static": "^1.11.1",
+    "tiny-lr": "^1.0.5",
     "yandex-translate": "github:sidorares/yandex-translate"
   },
   "devDependencies": {
     "bem-components": "^3.1.3",
     "bem-core": "^3.2.0",
     "bem-stat-counters": "^1.5.1",
-    "enb": "^1.3.0",
+    "enb": "^1.5.1",
     "enb-bem-techs": "^2.2.1",
     "enb-bemxjst": "^7.0.0",
     "enb-borschik": "^2.4.0",
@@ -58,7 +62,8 @@
     "start": "node server",
     "make": "enb make",
     "test": "jscs . && jshint-groups",
-    "watch": "watch-run -p '*.blocks/**' enb make",
+    "dev": "npm run make && nodemon",
+    "watch": "chokidar '*.blocks/**'",
     "docker-build": "docker build ."
   },
   "private": true
