--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongodb": "^2.1.18",
     "mongoose": "^4.5.2",
     "morgan": "^1.7.0",
+    "multer": "^1.3.0",
     "node-eval": "^1.1.0",
     "node-notifier": "^5.1.2",
     "parse-github-url": "^1.0.0",
