--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "parse-github-url": "^1.0.0",
     "passport": "^0.4.0",
     "passport-github2": "^0.1.10",
+    "sanitize-html": "^1.14.1",
     "serve-favicon": "^2.3.0",
     "serve-static": "^1.11.1",
     "tiny-lr": "^1.0.5",
